# Shopping-Patterns2-FastAPI-python

./: README.md  assignment2.md  pyproject.toml
playground/core/: product.py  receipt.py  sales.py  service_chooser.py  unit.py
playground/infra/API/: products_api.py  receipts_api.py  sales_api.py  units_api.py
playground/infra/Memory/InMemoryModules/: in_memory.py  product_in_memory_repo.py  receipt_in_memory_repo.py  unit_in_memory_repo.py
playground/infra/Memory/SQLlite/: sql_lite.py  sqllite_product_repo.py  sqllite_receipt_repo.py  sqllite_unit_repo.py
playground/runner/: __main__.py  setup.py  shop.db
tests/api_service_tests/: test_products.py  test_receipts.py  test_sales.py  test_units.py
tests/sqllite_tests/: shop_test.db  test_sqllite_product.py  test_sqllite_receipt.py  test_sqllite_unit.py
